# src/Modules/SamarPlanner.Report/Controllers/HighlightController.cs
@@ -4,6 +4,7 @@ using Microsoft.AspNetCore.Mvc;
 using SamarPlanner.Shared;
 using SamarPlanner.Shared.Contracts.Queries;
 using SamarPlanner.Shared.Kernel;
+using Swashbuckle.AspNetCore.Annotations;
 
 namespace SamarPlanner.Report.Controllers;
 
@@ -12,7 +13,8 @@ namespace SamarPlanner.Report.Controllers;
 public class HighlightController(IMediator mediator) : BaseController
 {
     [HttpGet]
-    public async Task<ActionResult<Result<List<GetHighlightSuggestionsQueryResponse>>>> GetHighlights(
+    [SwaggerOperation(OperationId = "GetHighlightsSuggestions")]
+    public async Task<ActionResult<Result<GetHighlightSuggestionsQueryResponse>>> GetHighlightsSuggestions(
         [FromQuery(Name = "text")] string text)
     {
         var result = await mediator.Send(new GetHighlightSuggestionsQuery(
